--- a/production/css/style.css
+++ b/production/css/style.css
@@ -2392,3 +2392,5 @@ fieldset[disabled] .s-btn {
     border-bottom: 1px solid #333333 !important;
     color: #000!important;
 }
+
+/* Own Custom */
